#
# Headers
#

# Headers to install
frameworkdir =       ${includedir}/kizbox/framework/core
framework_HEADERS =	 ./kizbox/framework/core/Base64.h \
                     ./kizbox/framework/core/Buffer.h \
                     ./kizbox/framework/core/Context.h \
                     ./kizbox/framework/core/Coroutine.h \
                     ./kizbox/framework/core/CRC.h \
                     ./kizbox/framework/core/Daemon.h \
                     ./kizbox/framework/core/Date.h \
                     ./kizbox/framework/core/Directory.h \
                     ./kizbox/framework/core/Event.h \
                     ./kizbox/framework/core/Exception.h \
                     ./kizbox/framework/core/Errno.h \
                     ./kizbox/framework/core/File.h \
                     ./kizbox/framework/core/Inotify.h \
                     ./kizbox/framework/core/Iterator.h \
                     ./kizbox/framework/core/Library.h \
                     ./kizbox/framework/core/Log.h \
                     ./kizbox/framework/core/Node.h \
                     ./kizbox/framework/core/Notifier.h \
                     ./kizbox/framework/core/Pipe.h \
                     ./kizbox/framework/core/Plugin.h \
                     ./kizbox/framework/core/PluginInterface.h \
                     ./kizbox/framework/core/PluginLoader.h \
                     ./kizbox/framework/core/PluginLoaderInterface.h \
                     ./kizbox/framework/core/Poller.h \
                     ./kizbox/framework/core/Process.h \
                     ./kizbox/framework/core/Shared.h \
                     ./kizbox/framework/core/Signal.h \
                     ./kizbox/framework/core/Stream.h \
                     ./kizbox/framework/core/Subject.h \
                     ./kizbox/framework/core/SymLink.h \
                     ./kizbox/framework/core/Task.h \
                     ./kizbox/framework/core/Terminal.h \
                     ./kizbox/framework/core/Thread.h \
                     ./kizbox/framework/core/Time.h \
                     ./kizbox/framework/core/Timer.h \
                     ./kizbox/framework/core/Twilight.h \
                     ./kizbox/framework/core/UniversalUniqueIdentifier.h \
                     ./kizbox/framework/core/Watcher.h \
                     ./kizbox/framework/core/UpdateFile.h \
                     ./kizbox/framework/core/Md5.h
